--- a/_notes/AWS 정리/클라우드 서비스.md
+++ b/_notes/AWS 정리/클라우드 서비스.md
@@ -2,8 +2,9 @@
 ---
 
 ### 서비스 제공 형태
-[[클라우드 컴퓨팅]]은 서비스 제공 형태에 따라 [[클라우드 구축 모델#퍼블릭 클라우드]], [[클라우드 구축 모델#프라이빗 클라우드]], [[클라우드 구축 모델#하이브리드 클라우드]]로 구분된다.
+
+서비스 제공 형태에 따라 [[클라우드 구축 모델#퍼블릭 클라우드]], [[클라우드 구축 모델#프라이빗 클라우드]], [[클라우드 구축 모델#하이브리드 클라우드]]로 구분된다.
 
 ### 서비스 유형
-서비스 관리 주체와 수준에 따라 클라우드 서비스를 [[IaaS]], [[PaaS]], [[SaaS]] 로 구분할 수 있다.
 
+서비스 관리 주체와 수준에 따라 클라우드 서비스를 [[IaaS]], [[PaaS]], [[SaaS]] 로 구분할 수 있다.
