docs: 4장 ELB 개념 및 중간고사 최종 요약

--- a/_notes/AWS 정리/가상 프라이빗 게이트웨이.md
+++ b/_notes/AWS 정리/가상 프라이빗 게이트웨이.md
@@ -1,2 +1,2 @@
-> 관리형 AWS [[Site-to-Site]] VPN을 연결하거나 AWS [[Direct Connect]]로 [[온프레미스 환경 연결]]
+> 관리형 AWS [[Site-to-Site]] VPN을 연결하거나 AWS [[Direct Connect]]로 [[온프레미스]] 환경 연결
 
